Fixed uneven card size issue when zooming screen out

--- a/src/components/cssStyling/Results.css
+++ b/src/components/cssStyling/Results.css
@@ -43,9 +43,6 @@
 
 /* Pie chart styling */
 .pie-chart-wrapper {
-  position: relative;
-  width: 100%;
-
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -58,6 +55,7 @@
   background-color: var(--light-color) !important;
   box-shadow: 0 4px 12px var(--card-shadow);
   width: fit-content;
+  max-width: 1450px; /* Set a max width to prevent it from growing too large */
 }
 
 .work-style-description {
@@ -110,7 +108,7 @@
 
 .pie-chart h3 {
   margin-bottom: 5%;
-  margin-top: -5%;
+  margin-top: -3%;
 }
 
 /* Bar chart styling */
@@ -127,6 +125,7 @@
   background-color: var(--light-color) !important;
   box-shadow: 0 4px 12px var(--card-shadow);
   width: fit-content;
+  max-width: 1450px; /* Set a max width to prevent it from growing too large */
 }
 
 .interest-description {
@@ -168,6 +167,7 @@
   background-color: var(--light-color) !important;
   box-shadow: 0 4px 12px var(--card-shadow);
   width: fit-content;
+  max-width: 1450px; /* Set a max width to prevent it from growing too large */
 }
 
 .career-item {
